[tool.poetry]
name = "llamaparse-pdf-to-markdown"
version = "0.1.0"
description = "Testing using LlamaParse to convert PDF (.pdf) files to markdown (.md)"
authors = ["Sam Longenbach <samuel.longenbach@storebrand.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.53"
llama-parse = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
